--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.7.8",
+    "ethers": "^5.6.5",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "walletlink": "^2.5.0",
+    "web3modal": "^1.9.7"
   },
   "devDependencies": {
     "eslint": "8.15.0",
