--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "walletlink": "^2.5.0",
+    "web3.storage": "^4.2.0",
     "web3modal": "^1.9.7"
   },
   "devDependencies": {
