--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
+    "@metamask/eth-sig-util": "^4.0.1",
     "@walletconnect/web3-provider": "^1.7.8",
     "ethers": "^5.6.5",
     "framer-motion": "^6.3.3",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "openpgp": "^5.2.1"
   }
 }
