--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "walletlink": "^2.5.0",
+    "web3": "^1.7.3",
     "web3.storage": "^4.2.0",
     "web3modal": "^1.9.7"
   },
