--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "walletlink": "^2.5.0",
     "web3": "^1.7.3",
     "web3.storage": "^4.2.0",
