--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/core": "^0.8.0",
     "@metamask/eth-sig-util": "^4.0.1",
     "@walletconnect/web3-provider": "^1.7.8",
+    "axios": "^0.27.2",
+    "cross-blob": "^3.0.1",
     "ethers": "^5.6.5",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
