--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@chakra-ui/core": "^0.8.0",
     "@metamask/eth-sig-util": "^4.0.1",
     "@walletconnect/web3-provider": "^1.7.8",
+    "bootstrap": "^5.1.3",
     "ethers": "^5.6.5",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "react-infinite-scroll-component": "^6.1.0",
