--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
     "@metamask/eth-sig-util": "^4.0.1",
+    "@uauth/js": "^1.1.0",
     "@walletconnect/web3-provider": "^1.7.8",
     "bootstrap": "^5.1.3",
     "ethers": "^5.6.5",
