--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@metamask/eth-sig-util": "^4.0.1",
     "@uauth/js": "^1.1.0",
     "@walletconnect/web3-provider": "^1.7.8",
+    "axios": "^0.27.2",
+    "cross-blob": "^3.0.1",
     "bootstrap": "^5.1.3",
     "ethers": "^5.6.5",
     "framer-motion": "^6.3.3",
