--- a/package.json
+++ b/package.json
@@ -11,19 +11,27 @@
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
     "@metamask/eth-sig-util": "^4.0.1",
+    "@types/express": "^4.17.13",
     "@uauth/js": "^1.1.0",
     "@walletconnect/web3-provider": "^1.7.8",
     "axios": "^0.27.2",
-    "cross-blob": "^3.0.1",
     "bootstrap": "^5.1.3",
+    "cross-blob": "^3.0.1",
     "ethers": "^5.6.5",
+    "express": "^4.18.1",
     "framer-motion": "^6.3.3",
+    "mdbreact": "^5.2.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-chat-plugin": "^0.1.17",
+    "react-chat-widget": "^3.1.4",
     "react-dom": "18.1.0",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.4.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "walletlink": "^2.5.0",
     "web3": "^1.7.3",
     "web3.storage": "^4.2.0",
